# clientconnect

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config.yaml  docker-compose.yml  prompts.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  temp.json
.github/workflows/: main.yaml
app/: chains.py  main.py  utils.py
app/data/: service2.txt  service3.txt  service5.txt
app/static/: styles.css
data/: organization_data.txt  service1.txt  service2.txt  service3.txt  service4.txt  service5.txt  service6.txt
src/: app.py  main.py
src/modules/: chains.py  organization_data.py  search.py  utils.py
src/modules/pipelines/: vector_database.py
src/my_client_connect_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/templates/: index.html
templates/: index.html
tests/unit/: unit_test.py
